# midnight-balloon-murder-videogame

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.dev.md  README.md  chunks.c  chunks.h  colors.c  colors.h  constants.h  context.h  counters.c  counters.h  ctx.c  ctx.h  drawables.c  drawables.h  drawing.c  drawing.h  fonts.c  fonts.h  fsm.c  fsm.h  fsm_level_finished.c  fsm_level_finished.h  fsm_paused.c  fsm_paused.h  fsm_playing.c  fsm_playing.h  fsm_start.c  fsm_start.h  hiscores.c  hiscores.h  keystate.c  keystate.h  levels.c  levels.h  main.c  (+52 more)
.codeblocks/: project.cbp  project.layout
assets/: CMakeLists.txt
assets/chunks/: CMakeLists.txt
assets/fonts/: CMakeLists.txt
assets/images/: CMakeLists.txt
chunks/: CMakeLists.txt
fonts/: CMakeLists.txt
images/: CMakeLists.txt
include/mbm/: chunks.h  colors.h  counters.h  deinit.h  drawable_background.h  drawable_balloons.h  drawable_barrel.h  drawable_bullets.h  drawable_collisions.h  drawable_flash.h  drawable_ground.h  drawable_keymap.h  drawable_legend.h  drawable_moon.h  drawable_titles.h  drawable_turret.h  drawables.h  drawing.h  fonts.h  fsm.h  fsm_level_finished.h  fsm_paused.h  fsm_playing.h  fsm_start.h  levels.h  renderer.h  scene.h  spritesheet.h  timing.h  types.h  window.h
lib/: README.md
src/: CMakeLists.txt  chunks.c  chunks.h  counters.c  deinit.c  deinit.h  drawable_background.c  drawable_background.h  drawable_balloons.c  drawable_balloons.h  drawable_barrel.c  drawable_barrel.h  drawable_bullets.c  drawable_bullets.h  drawable_collisions.c  drawable_collisions.h  drawable_flash.c  drawable_flash.h  drawable_ground.c  drawable_ground.h  drawable_keymap.c  drawable_keymap.h  drawable_legend.c  drawable_legend.h  drawable_moon.c  drawable_moon.h  drawable_titles.c  drawable_titles.h  drawable_turret.c  drawable_turret.h  drawables.c  drawing.c  drawing.h  fonts.c  fonts.h  fsm.c  fsm.h  fsm_level_finished.c  fsm_level_finished.h  fsm_paused.c  (+30 more)
src/exe/: CMakeLists.txt  main.c
src/mbm/: CMakeLists.txt  chunks.c  colors.c  counters.c  deinit.c  drawable_background.c  drawable_balloons.c  drawable_barrel.c  drawable_bullets.c  drawable_collisions.c  drawable_flash.c  drawable_ground.c  drawable_keymap.c  drawable_legend.c  drawable_moon.c  drawable_titles.c  drawable_turret.c  drawables.c  drawing.c  fonts.c  fsm.c  fsm_level_finished.c  fsm_paused.c  fsm_playing.c  fsm_start.c  levels.c  renderer.c  scene.c  spritesheet.c  timing.c  window.c
test/mbm/: CMakeLists.txt  test_addition.c  test_chunks.c  test_counters_init.c  test_division.c  test_levels_get_level_private.c  test_levels_get_level_sharpshooter.c  test_multiplication.c  test_subtraction.c
tests/: CMakeLists.txt  test_counters_init.c  test_fonts_init.c  test_levels_get_level_assassin.c  test_levels_get_level_berserker.c  test_levels_get_level_gunny.c  test_levels_get_level_novice.c
